add lupus/get lupus/push

--- a/lib/Ptolemy.Verb/Ptolemy.Verb.csproj
+++ b/lib/Ptolemy.Verb/Ptolemy.Verb.csproj
@@ -9,6 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Ptolemy.FilePath\Ptolemy.FilePath.csproj" />
+    <ProjectReference Include="..\Ptolemy.Logger\Ptolemy.Logger.csproj" />
     <ProjectReference Include="..\Ptolemy.Parameters\Ptolemy.Parameters.csproj" />
     <ProjectReference Include="..\Ptolemy.SiMetricPrefix\Ptolemy.SiMetricPrefix.csproj" />
   </ItemGroup>
