--- a/lib/Ptolemy.PipeLine/Ptolemy.PipeLine.csproj
+++ b/lib/Ptolemy.PipeLine/Ptolemy.PipeLine.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Kurukuru" Version="1.1.0" />
+  </ItemGroup>
+
 </Project>
