--- a/tools/Ptolemy.Lupus/Ptolemy.Lupus.csproj
+++ b/tools/Ptolemy.Lupus/Ptolemy.Lupus.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="ShellProgressBar" Version="4.3.0" />
+    <PackageReference Include="System.Reactive.Core" Version="4.1.6" />
+    <PackageReference Include="System.Reactive.Linq" Version="4.1.6" />
     <PackageReference Include="YamlDotNet" Version="6.1.2" />
   </ItemGroup>
 
