--- a/tools/Ptolemy.Hydra/Ptolemy.Hydra.csproj
+++ b/tools/Ptolemy.Hydra/Ptolemy.Hydra.csproj
@@ -8,10 +8,11 @@
     <ItemGroup>
       <ProjectReference Include="..\..\lib\Ptolemy.FilePath\Ptolemy.FilePath.csproj" />
       <ProjectReference Include="..\..\lib\Ptolemy.Logger\Ptolemy.Logger.csproj" />
+      <ProjectReference Include="..\..\lib\Ptolemy.Parameters\Ptolemy.Parameters.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="YamlDotNet.Signed" Version="6.0.0" />
+      <PackageReference Include="YamlDotNet" Version="6.1.2" />
     </ItemGroup>
 
 </Project>
