TODO: ArgoのCLIパーサー部分をかこう

--- a/lib/Ptolemy.ArgoRequest/Ptolemy.Argo.Request.csproj
+++ b/lib/Ptolemy.ArgoRequest/Ptolemy.Argo.Request.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\Ptolemy.Parameters\Ptolemy.Parameters.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+  </ItemGroup>
+
 </Project>
