--- a/tools/Ptolemy/Ptolemy.csproj
+++ b/tools/Ptolemy/Ptolemy.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="CommandLineParser" Version="2.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\lib\Ptolemy.Interface\Ptolemy.Interface.csproj" />
+  </ItemGroup>
+
 </Project>
