--- a/test/UnitTest/UnitTest.csproj
+++ b/test/UnitTest/UnitTest.csproj
@@ -21,6 +21,8 @@
     <ProjectReference Include="..\..\lib\Ptolemy.Config\Ptolemy.Config.csproj" />
     <ProjectReference Include="..\..\lib\Ptolemy.Exec\Ptolemy.Exec.csproj" />
     <ProjectReference Include="..\..\lib\Ptolemy.FilePath\Ptolemy.FilePath.csproj" />
+    <ProjectReference Include="..\..\lib\Ptolemy.Lupus.Request\Ptolemy.Lupus.Request.csproj" />
+    <ProjectReference Include="..\..\lib\Ptolemy.Lupus.Xml\Ptolemy.Lupus.Xml.csproj" />
     <ProjectReference Include="..\..\lib\Ptolemy.Map\Ptolemy.Map.csproj" />
     <ProjectReference Include="..\..\lib\Ptolemy.Parameters\Ptolemy.Parameters.csproj" />
     <ProjectReference Include="..\..\lib\Ptolemy.PipeLine\Ptolemy.PipeLine.csproj" />
