--- a/lib/Ptolemy.Lupus.Request/Ptolemy.Lupus.Request.csproj
+++ b/lib/Ptolemy.Lupus.Request/Ptolemy.Lupus.Request.csproj
@@ -1,16 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommandLineParser" Version="2.6.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\lib\Ptolemy.Interface\Ptolemy.Interface.csproj" />
+    <ProjectReference Include="..\Ptolemy.Parameters\Ptolemy.Parameters.csproj" />
   </ItemGroup>
 
 </Project>
