--- a/tools/Ptolemy.Lupus/Ptolemy.Lupus.csproj
+++ b/tools/Ptolemy.Lupus/Ptolemy.Lupus.csproj
@@ -6,25 +6,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DynamicExpresso.Core" Version="2.3.1" />
-    <PackageReference Include="EFCore.BulkExtensions" Version="2.6.0" />
-    <PackageReference Include="Kurukuru" Version="1.1.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.2.6" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="ShellProgressBar" Version="4.3.0" />
-    <PackageReference Include="System.Reactive.Core" Version="4.1.6" />
-    <PackageReference Include="System.Reactive.Linq" Version="4.1.6" />
-    <PackageReference Include="YamlDotNet" Version="6.1.2" />
+    <PackageReference Include="CommandLineParser" Version="2.6.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\lib\Ptolemy.Interface\Ptolemy.Interface.csproj" />
-    <ProjectReference Include="..\..\lib\Ptolemy.Map\Ptolemy.Map.csproj" />
-    <ProjectReference Include="..\..\lib\Ptolemy.PipeLine\Ptolemy.PipeLine.csproj" />
-    <ProjectReference Include="..\..\lib\Ptolemy.Verb\Ptolemy.Verb.csproj" />
+    <ProjectReference Include="..\..\lib\Ptolemy.Exec\Ptolemy.Exec.csproj" />
+    <ProjectReference Include="..\..\lib\Ptolemy.FilePath\Ptolemy.FilePath.csproj" />
+    <ProjectReference Include="..\..\lib\Ptolemy.Logger\Ptolemy.Logger.csproj" />
+    <ProjectReference Include="..\..\lib\Ptolemy.Lupus.Request\Ptolemy.Lupus.Request.csproj" />
+    <ProjectReference Include="..\..\lib\Ptolemy.Lupus.Xml\Ptolemy.Lupus.Xml.csproj" />
+    <ProjectReference Include="..\..\lib\Ptolemy.Parameters\Ptolemy.Parameters.csproj" />
+    <ProjectReference Include="..\..\lib\Ptolemy.SiMetricPrefix\Ptolemy.SiMetricPrefix.csproj" />
   </ItemGroup>
 
 </Project>
