Transistorのバインドをいい感じにしたい

--- a/lib/Ptolemy.Config/Ptolemy.Config.csproj
+++ b/lib/Ptolemy.Config/Ptolemy.Config.csproj
@@ -12,7 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Ptolemy.ArgoRequest\Ptolemy.Argo.Request.csproj" />
     <ProjectReference Include="..\Ptolemy.FilePath\Ptolemy.FilePath.csproj" />
-    <ProjectReference Include="..\Ptolemy.Lupus.Request\Ptolemy.Lupus.Request.csproj" />
+    <ProjectReference Include="..\Ptolemy.Interface\Ptolemy.Interface.csproj" />
   </ItemGroup>
 
 </Project>
