--- a/lib/Ptolemy.Interface/Ptolemy.Interface.csproj
+++ b/lib/Ptolemy.Interface/Ptolemy.Interface.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="CommandLineParser" Version="2.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ptolemy.Parameters\Ptolemy.Parameters.csproj" />
+  </ItemGroup>
+
 </Project>
