--- a/lib/Ptolemy.Repository/Ptolemy.Repository.csproj
+++ b/lib/Ptolemy.Repository/Ptolemy.Repository.csproj
@@ -8,4 +8,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ptolemy.Map\Ptolemy.Map.csproj" />
+    <ProjectReference Include="..\Ptolemy.SiMetricPrefix\Ptolemy.SiMetricPrefix.csproj" />
+  </ItemGroup>
+
 </Project>
