--- a/tools/Ptolemy.Argo/Ptolemy.Argo.csproj
+++ b/tools/Ptolemy.Argo/Ptolemy.Argo.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="CommandLineParser" Version="2.6.0" />
     <PackageReference Include="Kurukuru" Version="1.1.0" />
     <PackageReference Include="ShellProgressBar" Version="4.3.0" />
+    <PackageReference Include="System.Reactive.Core" Version="4.1.6" />
+    <PackageReference Include="System.Reactive.Linq" Version="4.1.6" />
     <PackageReference Include="YamlDotNet" Version="6.1.2" />
   </ItemGroup>
 
