--- a/lib/Ptolemy.Exec/Ptolemy.Exec.csproj
+++ b/lib/Ptolemy.Exec/Ptolemy.Exec.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Reactive.Core" Version="4.1.6" />
+  </ItemGroup>
+
 </Project>
