--- a/lib/Ptolemy.Draco.Request/Ptolemy.Draco.Request.csproj
+++ b/lib/Ptolemy.Draco.Request/Ptolemy.Draco.Request.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ptolemy.Parameters\Ptolemy.Parameters.csproj" />
+  </ItemGroup>
+
 </Project>
