--- a/lib/Ptolemy.Config/Ptolemy.Config.csproj
+++ b/lib/Ptolemy.Config/Ptolemy.Config.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\Ptolemy.Draco.Request\Ptolemy.Draco.Request.csproj" />
     <ProjectReference Include="..\Ptolemy.FilePath\Ptolemy.FilePath.csproj" />
     <ProjectReference Include="..\Ptolemy.Interface\Ptolemy.Interface.csproj" />
+    <ProjectReference Include="..\Ptolemy.Libra.Request\Ptolemy.Libra.Request.csproj" />
   </ItemGroup>
 
 </Project>
