--- a/lib/Ptolemy.Cli/Ptolemy.Cli.csproj
+++ b/lib/Ptolemy.Cli/Ptolemy.Cli.csproj
@@ -6,6 +6,8 @@
 
     <ItemGroup>
       <PackageReference Include="CommandLineParser" Version="2.6.0" />
+      <PackageReference Include="ShellProgressBar" Version="4.3.0" />
+      <PackageReference Include="System.Reactive.Core" Version="4.1.6" />
     </ItemGroup>
 
     <ItemGroup>
