--- a/tools/Ptolemy.Aries/Ptolemy.Aries.csproj
+++ b/tools/Ptolemy.Aries/Ptolemy.Aries.csproj
@@ -9,6 +9,7 @@
     <ProjectReference Include="..\..\lib\Ptolemy.ArgoRequest\Ptolemy.Argo.Request.csproj" />
     <ProjectReference Include="..\..\lib\Ptolemy.Config\Ptolemy.Config.csproj" />
     <ProjectReference Include="..\..\lib\Ptolemy.Draco.Request\Ptolemy.Draco.Request.csproj" />
+    <ProjectReference Include="..\..\lib\Ptolemy.OptionException\Ptolemy.OptionException.csproj" />
     <ProjectReference Include="..\..\lib\Ptolemy.Parameters\Ptolemy.Parameters.csproj" />
     <ProjectReference Include="..\Ptolemy.Argo\Ptolemy.Argo.csproj" />
     <ProjectReference Include="..\Ptolemy.Draco\Ptolemy.Draco.csproj" />
