--- a/lib/Ptolemy.Config/Ptolemy.Config.csproj
+++ b/lib/Ptolemy.Config/Ptolemy.Config.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\Ptolemy.FilePath\Ptolemy.FilePath.csproj" />
     <ProjectReference Include="..\Ptolemy.Interface\Ptolemy.Interface.csproj" />
     <ProjectReference Include="..\Ptolemy.Libra.Request\Ptolemy.Libra.Request.csproj" />
+    <ProjectReference Include="..\Ptolemy.Slack\Ptolemy.Slack.csproj" />
   </ItemGroup>
 
 </Project>
