--- a/tools/Ptolemy.Libra/Ptolemy.Libra.csproj
+++ b/tools/Ptolemy.Libra/Ptolemy.Libra.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Kurukuru" Version="1.1.0" />
+    <PackageReference Include="ShellProgressBar" Version="4.3.0" />
     <PackageReference Include="System.Reactive" Version="4.1.6" />
   </ItemGroup>
 
