--- a/tools/Ptolemy/Ptolemy.csproj
+++ b/tools/Ptolemy/Ptolemy.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\..\lib\Ptolemy.Parameters\Ptolemy.Parameters.csproj" />
     <ProjectReference Include="..\..\lib\Ptolemy.Repository\Ptolemy.Repository.csproj" />
     <ProjectReference Include="..\..\lib\Ptolemy.Slack\Ptolemy.Slack.csproj" />
+    <ProjectReference Include="..\Ptolemy.Libra\Ptolemy.Libra.csproj" />
   </ItemGroup>
 
 </Project>
