--- a/tools/Ptolemy/Ptolemy.csproj
+++ b/tools/Ptolemy/Ptolemy.csproj
@@ -12,10 +12,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\lib\Ptolemy.Interface\Ptolemy.Interface.csproj" />
+    <ProjectReference Include="..\..\lib\Ptolemy.Libra.Request\Ptolemy.Libra.Request.csproj" />
     <ProjectReference Include="..\..\lib\Ptolemy.Logger\Ptolemy.Logger.csproj" />
     <ProjectReference Include="..\..\lib\Ptolemy.Parameters\Ptolemy.Parameters.csproj" />
     <ProjectReference Include="..\..\lib\Ptolemy.Repository\Ptolemy.Repository.csproj" />
     <ProjectReference Include="..\..\lib\Ptolemy.Slack\Ptolemy.Slack.csproj" />
+    <ProjectReference Include="..\Ptolemy.Libra\Ptolemy.Libra.csproj" />
   </ItemGroup>
 
 </Project>
