--- a/tools/Ptolemy.Hydra/Ptolemy.Hydra.csproj
+++ b/tools/Ptolemy.Hydra/Ptolemy.Hydra.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -12,6 +12,7 @@
       </PackageReference>
       <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
       <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
+      <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0-dev-00037" />
     </ItemGroup>
 
     <ItemGroup>
