Add: HydraRepository 名前は考えた方が良さそう

--- a/tools/Ptolemy.Hydra/Ptolemy.Hydra.csproj
+++ b/tools/Ptolemy.Hydra/Ptolemy.Hydra.csproj
@@ -19,6 +19,7 @@
       <ProjectReference Include="..\..\lib\Ptolemy.ArgoRequest\Ptolemy.Argo.Request.csproj" />
       <ProjectReference Include="..\..\lib\Ptolemy.Config\Ptolemy.Config.csproj" />
       <ProjectReference Include="..\..\lib\Ptolemy.Hydra.Request\Ptolemy.Hydra.Request.csproj" />
+      <ProjectReference Include="..\..\lib\Ptolemy.Repository\Ptolemy.Repository.csproj" />
     </ItemGroup>
 
 </Project>
