やるきをうしないつつある

--- a/tools/Ptolemy.Aries/Ptolemy.Aries.csproj
+++ b/tools/Ptolemy.Aries/Ptolemy.Aries.csproj
@@ -11,6 +11,7 @@
     <ProjectReference Include="..\..\lib\Ptolemy.Draco.Request\Ptolemy.Draco.Request.csproj" />
     <ProjectReference Include="..\..\lib\Ptolemy.OptionException\Ptolemy.OptionException.csproj" />
     <ProjectReference Include="..\..\lib\Ptolemy.Parameters\Ptolemy.Parameters.csproj" />
+    <ProjectReference Include="..\..\lib\Ptolemy.Simulator\Ptolemy.Simulator.csproj" />
     <ProjectReference Include="..\..\lib\Ptolemy.Slack\Ptolemy.Slack.csproj" />
     <ProjectReference Include="..\Ptolemy.Argo\Ptolemy.Argo.csproj" />
     <ProjectReference Include="..\Ptolemy.Draco\Ptolemy.Draco.csproj" />
