--- a/lib/Ptolemy.Simulator/Ptolemy.Simulator.csproj
+++ b/lib/Ptolemy.Simulator/Ptolemy.Simulator.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Ptolemy.ArgoRequest\Ptolemy.Argo.Request.csproj" />
+    <ProjectReference Include="..\Ptolemy.FilePath\Ptolemy.FilePath.csproj" />
+    <ProjectReference Include="..\Ptolemy.Map\Ptolemy.Map.csproj" />
     <ProjectReference Include="..\Ptolemy.Repository\Ptolemy.Repository.csproj" />
   </ItemGroup>
 
