--- a/tools/Ptolemy.Argo/Ptolemy.Argo.csproj
+++ b/tools/Ptolemy.Argo/Ptolemy.Argo.csproj
@@ -23,6 +23,7 @@
     <ProjectReference Include="..\..\lib\Ptolemy.Parameters\Ptolemy.Parameters.csproj" />
     <ProjectReference Include="..\..\lib\Ptolemy.Repository\Ptolemy.Repository.csproj" />
     <ProjectReference Include="..\..\lib\Ptolemy.SiMetricPrefix\Ptolemy.SiMetricPrefix.csproj" />
+    <ProjectReference Include="..\..\lib\Ptolemy.Simulator\Ptolemy.Simulator.csproj" />
   </ItemGroup>
 
 </Project>
