--- a/tools/Ptolemy.Hydra/Ptolemy.Hydra.csproj
+++ b/tools/Ptolemy.Hydra/Ptolemy.Hydra.csproj
@@ -20,6 +20,7 @@
       <ProjectReference Include="..\..\lib\Ptolemy.Config\Ptolemy.Config.csproj" />
       <ProjectReference Include="..\..\lib\Ptolemy.Hydra.Request\Ptolemy.Hydra.Request.csproj" />
       <ProjectReference Include="..\..\lib\Ptolemy.Repository\Ptolemy.Repository.csproj" />
+      <ProjectReference Include="..\..\lib\Ptolemy.Simulator\Ptolemy.Simulator.csproj" />
     </ItemGroup>
 
 </Project>
